# gitsummary

./: .gitignore  .gitsummaryignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  REAMDE.md  SECURITY.md  SKILL.md  manage_release.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  EXAMPLES.md  TODO.md  cli_design.md  commit_artifact_brainstorm.md  current_development_status.md  future_plans.md  getting_started.md  index.md  install_update.md  project_summary.md  release_guide.md  spec.md  storage_layout.md  why.md
examples/: release-note-latest.md
gitsummary/: __init__.py  __main__.py  artifact.py  cli.py  collector.py  git.py  git_ops.py  ignore.py  py.typed  schema.py  storage.py  tracing.py
release-notes/: README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.1.0.md
scripts/: bump_patch_version.py  check_artifact_meta.sh
tests/: __init__.py  conftest.py  test_bump_patch_version.py  test_cli_ci_release_notes.py  test_cli_formatters.py  test_cli_generate_feed.py  test_cli_gh_release_create.py  test_cli_init.py  test_cli_release_note.py  test_cli_ui_components.py  test_core_artifact.py  test_core_enums.py  test_core_models.py  test_core_release_note.py  test_extractors_base.py  test_extractors_heuristic.py  test_extractors_llm.py  test_infrastructure_git.py  test_infrastructure_notes.py  test_infrastructure_postgres.py  test_infrastructure_storage.py  test_llm_release_note_schemas.py  (+9 more)
(+92 files in other folders)
